<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Login activity layout -->
    <!-- description: Login create account text -->
    <string name="login_text_create_account">Não tem uma conta? Cadastre-se</string>
    <!-- description: Login forgot password text -->
    <string name="login_text_forgot_password">Esqueci a senha</string>
    <!-- description: Login submit button text -->
    <string name="login_button_submit">ENTRAR</string>
    <!-- description: Login input text password hint -->
    <string name="login_textinput_hint_password">Senha</string>
    <!-- description: Login input text email hint -->
    <string name="login_textinput_hint_email">Email</string>

    <!-- Login error messages -->
    <!-- description: Login error message for invalid passwords -->
    <string name="login_error_invalid_password">Senha inválida, a senha deve conter mais que 8 carácteres</string>
    <!-- description: Login error message for email not subscribed -->
    <string name="login_error_not_subscribed">Email não cadastrado</string>
    <!-- description: Login error message for server unavailable -->
    <string name="login_error_server_unavailable">Servidor indisponível, tente novamente</string>
    <!-- description: Login error message for invalid email -->
    <string name="login_error_invalid_email">Email inválido</string>
</resources>
