<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@mipmap/apelie_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_textfield_outline_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:focusedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_textinput_hint_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_textfield_email"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_textfield_outline_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:focusedByDefault="false"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/login_textfield_outline_email"
        android:hint="@string/login_textinput_hint_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_textfield_password"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/login_textfield_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:cornerRadius="5dp"
        android:text="@string/login_button_submit"
        app:layout_constraintTop_toBottomOf="@+id/login_textfield_outline_password" />

    <TextView
        android:id="@+id/login_text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:textColor="@color/login_text_color"
        android:text="@string/login_text_create_account"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button_submit"/>

    <TextView
        android:id="@+id/login_text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:textColor="@color/login_text_color"
        android:text="@string/login_text_forgot_password"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@+id/login_text_create_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>
